# tg_b_date

./: README.md  main.py  pyproject.toml
back/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
back/src/alembic/: env.py
back/src/api/v1/: __init__.py
back/src/api/v1/crud/: users.py
back/src/core/: config.py
back/src/core/models/: __init__.py
back/src/core/schemas/: users.py
bot/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
front/: Dockerfile  package-lock.json  package.json  vite.config.ts
front/src/: App.vue  main.ts
front/src/router/: index.ts
front/src/stores/: user.ts
front/src/views/: BirthDate.vue  BirthdayInfo.vue  SharedInfo.vue
src/: .env.template  bot.py  main.py
src/alembic/versions/: 2025_03_16_2311-9ba971ec0e67_create_users_table.py
src/api/: __init__.py
src/api/v1/: users.py
src/core/models/: db_helper.py  users.py
